--- a/src/assets/i18n/th.json
+++ b/src/assets/i18n/th.json
@@ -3,9 +3,33 @@
         "title": "กรุณาเข้าสู่ระบบ.",
         "description": "ทำงานที่บ้าน / ทำงานที่สำนักงาน แบบสอบถามประจำวัน",
         "message_error": "ไม่พบอีเมล์นี้ในระบบ",
-        "input1": "ชื่อบริษัท",
-        "input2": "อีเมล์ผู้จัดการ",
-        "input3": "อีเมล์พนักงาน",
+        "language": "ภาษา",
+        "input1": "อีเมล์",
+        "input2": "รหัสผ่าน",
+        "register": "ลงทะเบียน",
+        "forgetpassword": "ลืมรหัสผ่าน",
+        "submit": "เข้าสู่ระบบ"
+    },
+    "register": {
+        "title": "กรุณาลงทะเบียน.",
+        "description": "ทำงานที่บ้าน / ทำงานที่สำนักงาน แบบสอบถามประจำวัน",
+        "message_error": "ไม่พบอีเมล์นี้ในระบบ",
+        "language": "ภาษา",
+        "input1": "อีเมล์",
+        "input2": "รหัสผ่าน",
+        "register": "ลงทะเบียน",
+        "forgetpassword": "ลืมรหัสผ่าน",
+        "submit": "เข้าสู่ระบบ"
+    },
+    "forgetpassword": {
+        "title": "รีเซ็ทรหัสผ่าน.",
+        "description": "ทำงานที่บ้าน / ทำงานที่สำนักงาน แบบสอบถามประจำวัน",
+        "message_error": "ไม่พบอีเมล์นี้ในระบบ",
+        "language": "ภาษา",
+        "input1": "อีเมล์",
+        "input2": "รหัสผ่าน",
+        "register": "ลงทะเบียน",
+        "forgetpassword": "ยืนยัน",
         "submit": "เข้าสู่ระบบ"
     },
     "sensor": {
